objects/Progress_Bar_Question__c.object
<CustomObject>
    <fields>
        <fullName>Field_Api_Name__c</fullName>
        <inlineHelpText>This field will have the name of the field to which the question is related.</inlineHelpText>
        <label>Field Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <inlineHelpText>This field will have the name of the object to which the question is related.</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <inlineHelpText>The question will display for progress bar.</inlineHelpText>
        <label>Question</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Weightage__c</fullName>
        <inlineHelpText>This field determines the weightage of question.</inlineHelpText>
        <label>Weightage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Progress Bar Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Object_Name__c</columns>
        <columns>Field_Api_Name__c</columns>
        <columns>Question__c</columns>
        <columns>Weightage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Progress Bar Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Entry_of_reference_field_and_address</fullName>
        <active>true</active>
        <description>Whenever there will be an entry of reference field or an address, An error will popup.</description>
        <errorConditionFormula>OR(Field_Api_Name__c==&apos;Address&apos;,Field_Api_Name__c==&apos;ManagerId&apos;)</errorConditionFormula>
        <errorMessage>The field entered is not supported by Profile Progress Bar.</errorMessage>
    </validationRules>
</CustomObject>